# kinematics

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: compiler_warnings.cmake
include/: kinematics.h
src/: kinematics.cpp
test/: kinematics_test.cpp
